--- a/style.css
+++ b/style.css
@@ -2,14 +2,44 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: 'Roboto', sans-serif;
+    background-image: url(images/patt.png);
+}
 
-h3,
-h4,
-h5,
-body,
-p,
-button {
-    margin: 0;
-    padding: 0;
-    border: none;
+.header {
+    background-color: rgba(255, 255, 255, 0.75);
+    height: 100px;
+    display: flex;
+    align-items: center;
+}
+
+.container {
+    width: 1200px;
+    padding: 0 15px;
+    margin: auto;
+}
+
+.row {
+    display: flex;
+    margin: 0 -15px;
+}
+
+[class*="col-"] {
+    padding: 0 15px;
+}
+
+.col-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+}
+
+.col-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+}
+
+.col-12 {
+    flex: 0 0 100%;
+    max-width: 100%;
 }
