add navigation menu

--- a/style.css
+++ b/style.css
@@ -43,3 +43,32 @@ body {
     flex: 0 0 100%;
     max-width: 100%;
 }
+
+.menu {
+    display: flex;
+
+}
+
+.menu li {
+    width: 25%;
+}
+
+.menu li:last-child a {
+    border-right: 1px solid #2c71b8;
+}
+
+.menu a {
+    display: block;
+    height: 50px;
+    text-align: center;
+    line-height: 50px;
+    text-decoration: none;
+    color: #2c71b8;
+    font-size: 21px;
+    border-left: 1px solid #2c71b8;
+}
+
+.menu a:hover {
+    background-color: #2c71b8;
+    color: white;
+}
